<resources>
    <string name="app_name">My Application</string>

    <string name="log_text">Logearse</string>
    <string name="Plannensas">Plannen SAS</string>
    <string name="welcome_back">Plannen SAS Android</string>
    <string name="read_it_together">apostandole a la excelencia en UI/UX</string>
    <string name="skip">Skip</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="forget_password">Forget Password.?</string>
    <!--list-->
    <string name="LisClient">Lista de Clientes</string>
    <!--edit-->
    <string name="EditClient">Edicion de Clientes</string>
    <string name="name">Nombre</string>
    <string name="LastName">Apellidos</string>
    <string name="Address">Direccion</string>
    <string name="Phone">Celular</string>
    <string name="Status">Estado</string>
    <string name="Save">Guardar</string>

    <!-- Error Edit Form-->
    <string name="ErrorName">debe digitar un Nombre</string>
    <string name="ErrorLastName">debe digitar un Apellido</string>
    <string name="ErrorAdress">debe digitar una Dirrecion</string>
    <string name="ErrorTelefono">debe digitar un Telefono</string>
    <!--logs-->
    <string name="Logs">Logs de Uso</string>
    <!--About-->
    <string name="About">Acerca del Desarrollador</string>
    <string name="developer">\u0040qleoz12</string>
    <string name="github">https://github.com/Qleoz12</string>

    <!--menu -->
    <string name="action_settings">algooo</string>


</resources>
